5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1764_2390.log
== TEST (2019-05-25 16:21:39) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
mes = len(pre)+1
print(pre)
print(falt)
print(mes) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:25:40) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
print(freq)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:28:02) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt

i = 0
while(i != max(pre))
	i = i+1
print(i+1)

print(freq)
-- ERROR:
File "XXXX", line 7
    while(i != max(pre))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:28:17) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt

i = 0
while(i != max(pre)):
	i = i+1
print(i+1)

print(freq)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:29:28) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
i = 0
while(i != max(pre)):
	i = i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:30:20) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
i = 0
while(i != max(pre)):
	i = i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:31:38) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
i = 0
while(i != max(pre)):
	i = i+1
print(mes(i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:32:06) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])
i = 0
while(i != max(pre)):
	i = i+1
print(mes(i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:32:29) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])
i = 0
while(i != max(pre)):
	i = i+1
print(mes[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:33:49) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])
i = 0
while(i != max(freq)):
	i = i+1
print(mes[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:34:23) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3])
i = 0
while(i != max(freq)):
	i = i+1
print(mes[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:30:19) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])
i = 0
while(i != max(freq)):
	i = i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:30:31) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])
i = 0
while(i != max(freq)):
	i = i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:33:11) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])
i = 0
while(freq[i] != max(freq)):
	i = i+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:33:50) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])
i = 0
while(freq[i] != max(freq)):
	i = i+1
print(mes[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:34:25) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])
i = 0
while(freq[i] != max(freq)):
	i = i+1
print(mes[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 17:35:15) 
-- CODE:
from numpy import *
pre = array(eval(input("Digite o numero de presentes a cada mes: ")))
falt = array(eval(input("Digite o numero de faltantes a cada mes: ")))
freq = pre - falt
mes = array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])
i = 0
while(freq[i] != max(freq)):
	i = i+1
print(mes[i])
-- EXECUTION TIME:
0.436847
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
